--- a/templates/yourbalance.html
+++ b/templates/yourbalance.html
@@ -25,9 +25,10 @@
                 </ion-item>
             </ion-list>
             <div class="padding-horizontal">
-                <button class="button button-block button-balanced" ng-click="openedit();">Add Balance</button>
+                <button class="button button-block button-balanced" ng-click="openedit();">
+                    Add Balance
+                </button>
             </div>
         </div>
-
     </ion-content>
 </ion-view>
