--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,10 @@
             <div class="btn-login">
                 <a class="button button-block button-balanced" ng-click="onlogin(user1)" type="submit">Login</a>
             </div>
+            
+            <div class="registration pull-right" ng-click="openreg();">
+                   Register to become Member
+            </div>
 
             <!--<div class="forgot"><a href="#">Forgot Password?</a></div>-->
         </div>
