--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
             </div>
             
             <div class="registration pull-right" ng-click="openreg();">
-                   Register to become Member
+                   Become a Member?
             </div>
 
             <!--<div class="forgot"><a href="#">Forgot Password?</a></div>-->
