--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 
     <ion-content class="padding">
         <div class="incard">
-           <div class="header-card">Find shops</div>
+<!--           <div class="header-card">Find shops</div>-->
             <div class="profile-img" ng-controller="ProfileCtrl">
                 <img ng-src="{{profile.shoplogo|serverimage}}">
                 <h3>{{profile.shopname}}</h3>
