--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-modal-view>
     <ion-header-bar class="bar-royal">
         <h1 class="title"> Registration</h1>
         <div class="buttons">
@@ -65,4 +65,4 @@
             </div>
         </div>
     </ion-content>
-</ion-view>
+</ion-modal-view>
