--- a/templates/menu.html
+++ b/templates/menu.html
@@ -42,7 +42,7 @@
                 <ion-item nav-clear menu-close href="#/app/faq">
                     <span>FAQ</span>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/login">
+                <ion-item nav-clear menu-close href="#/login" ng-click="logoutfunction();">
                     <span>Logout</span>
                 </ion-item>
                 </div>
