--- a/templates/registration.html
+++ b/templates/registration.html
@@ -28,7 +28,7 @@
                         <input type="text" placeholder="Number">
                     </label>
                     <label class="item item-input">
-                        <span class="input-label">Meassage</span>
+                        <span class="input-label">Message</span>
                         <textarea cols="30" rows="3">
                         </textarea>
                     </label>
@@ -55,7 +55,7 @@
                         <input type="text" placeholder="Number">
                     </label>
                     <label class="item item-input item-stacked-label">
-                        <span class="input-label">Meassage</span>
+                        <span class="input-label">Message</span>
                         <textarea placeholder="Message"></textarea>
                     </label>
                 </div>
