--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Add Balance">
+<ion-modal-view view-title="Add Balance">
     <ion-header-bar class="bar-royal">
         <h1 class="title">Add Balance</h1>
         <div class="buttons">
@@ -30,4 +30,4 @@
             </form>
         </div>
     </ion-content>
-</ion-view>
+</ion-modal-view>
